--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^13.0.0",
     "@vercel/og": "^0.0.20",
     "next": "13.0.0",
     "react": "18.2.0",
